--- a/style.css
+++ b/style.css
@@ -1,10 +1,3 @@
-#maparea {
-    position: absolute;
-    top: 5px;
-    left: 5px;
-    width: 800px;
-    height: 600px;
-}
 #mapCanvas {
     position: absolute;
     top: 0px;
@@ -37,8 +30,8 @@
 }
 #coorddisplay {
     position: absolute;
-    right: 10px;
-    bottom: 10px;
+    left: 10;
+    top: 565px;
     background-color: #ffffff;
     border: 1px solid #d3d3d3;
     /*on top of map*/
