--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
     top: 0px;
     left: 0px;
     border: 1px solid #d3d3d3;
+    /*width: 99%;*/
+    /*height: 99%;*/
     /*on bottom*/
     z-index: 0;
 }
@@ -10,8 +12,8 @@
     position: absolute;
     top: 0px;
     left: 0px;
-    width: 800px;
-    height: 600px;
+    /*width: 99%;*/
+    /*height: 99%;*/
     /*on top of map*/
     z-index: 1;
 }
@@ -42,11 +44,11 @@
 #editlist {
     text-align: right;
 }
-#updatedata {
+/*#updatedata {
     position: absolute;
     top: 10px;
     left: 810px;
-}
+}*/
 #featureinfo {
     position: absolute;
     max-width: 600px;
