Closes #51: reimplement toggling feature groups and a little cleanup

--- a/style.css
+++ b/style.css
@@ -11,6 +11,9 @@ body {
     /*on bottom*/
     z-index: 0;
 }
+.hiddenFeatureGroup {
+    display: none;
+}
 #mapoverlay {
     position: absolute;
     top: 0px;
