Added ability to edit feature from featureInfo Moved site-specific path stuff to variables at the top

--- a/style.css
+++ b/style.css
@@ -71,6 +71,10 @@ body {
     position: relative;
     right: 2px;
 }
+.featureInfoBody {
+    max-height: 400px;
+    overflow: auto;
+}
 #mouseoverbox {
     position: absolute;
     /*off screen initially*/
