Integrated adding and editing of features, categories and maps through the upper right menu

--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
     right: 10px;
 }
 #layerBox,
-#editBox{
+#editBox {
     float: right;
     clear: right;
 }
@@ -64,6 +64,11 @@ body {
     right: 2px;
 }
 .featureInfoBody {
+    max-height: 400px;
+    overflow: auto;
+}
+#editFormArea {
+    max-width: 300px;
     max-height: 400px;
     overflow: auto;
 }
